--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                                 <span>or continue with</span>
                             </div>
                             <div class="d-flex gap-4 align-items-center">
-                                <button class="btn btn-light w-100 fw-bold"><img class="img-fluid me-3"
-                                        src="./assets/icon/google.png" alt="">
+                                <button class="btn btn-light w-100 fw-bold"><img style="width: 18px;"
+                                        class=" img-fluid me-2" src="./assets/icon/google.png" alt="">
                                     Google</button>
-                                <button class="btn btn-light w-100 fw-bold">Apple</button>
+                                <button class="btn btn-light w-100 fw-bold"><img class="img-fluid me-2"
+                                        src="./assets/icon/apple.svg" alt=""> Apple</button>
                             </div>
                         </div>
 
@@ -74,6 +75,52 @@
     </section>
 
     <!-- earning section -->
+
+
+    <section class="help">
+        <div class="container">
+            <h1>Need help?</h1>
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <div class="d-flex align-items-start gap-4">
+                        <img src="./assets/icon/support.svg" alt="">
+                        <div>
+                            <h6>24/7 Chat Support</h6>
+                            <p>Get 24/7 chat support with our friendly customer service agents at your service.</p>
+                            <button>Chat now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="d-flex align-items-start gap-4">
+                        <img src="./assets/icon/faq.svg" alt="">
+                        <div>
+                            <h6>FAQs </h6>
+                            <p>View FAQs for detailed instructions on specific features.</p>
+                            <button>View more</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="d-flex align-items-start gap-4">
+                        <img src="./assets/icon/blog.svg" alt="">
+                        <div>
+                            <h6>Blog </h6>
+                            <p>Stay up to date with the latest stories and commentary.</p>
+                            <button>View more</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+    <!-- earning section -->
     <section class="earning">
         <div class="container text-center">
             <h1>Start earning today</h1>
@@ -82,9 +129,144 @@
     </section>
 
 
+    <!-- footer section -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-2">
+                    <h6>About Us</h6>
+                    <div>
+                        <a href="#">About</a>
+                        <a href="#">Press</a>
+                        <a href="#">Careers</a>
+                        <a href="#">Business Contacts</a>
+                        <a href="#">Community
+                        </a>
+                        <a href="#">Blog
+                        </a>
+                        <a href="#">Building Trust
+                        </a>
+                        <a href="#">Legal
+                        </a>
+                        <a href="#">Terms
+                        </a>
+                        <a href="#">Privacy
+                        </a>
+                        <a href="#">Risk Warning
+                        </a>
+                        <a href="#">Announcements
+                        </a>
+                        <a href="#">News
+                        </a>
+                        <a href="#">Notices
+                        </a>
+                        <a href="#">Sitemap
+
+                        </a>
+                        <a href="#">
+                            Cookie Preferences
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-2">
+                    <h6>Products
+                    </h6>
+                    <div>
+                        <a href="#">Exchange
+                        </a>
+                        <a href="#">Academy
+                        </a>
+                        <a href="#">Leveraged Tokens
+                        </a>
+                        <a href="#">Live
+                        </a>
+                        <a href="#">Charity
+
+                        </a>
+                        <a href="#">Labs
+
+                        </a>
+                        <a href="#">Launchpad
+
+                        </a>
+                        <a href="#">Research
+
+                        </a>
+                        <a href="#">NFT
+
+                        </a>
+                        <a href="#">Pay
+
+                        </a>
+                        <a href="#">Gift Card
+
+                        </a>
+                        <a href="#">BABT
+
+                        </a>
+                        <a href="#">Tax
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col-12 col-lg-2">
+                    <h6>Service
+
+                    </h6>
+                    <div>
+                        <a href="#">Downloads
+
+                        </a>
+                        <a href="#">Desktop Application
+
+                        </a>
+                        <a href="#">Buy Crypto
+
+                        </a>
+                        <a href="#">Institutional & VIP Services
+
+                        </a>
+                        <a href="#"> OTC Trading
 
 
+                        </a>
+                        <a href="#"> Referral
 
+
+                        </a>
+                        <a href="#"> Affiliate
+
+
+                        </a>
+                        <a href="#"> BNB
+
+
+                        </a>
+                        <a href="#"> Listing Application
+
+
+                        </a>
+                        <a href="#"> P2P Merchant Application
+
+
+                        </a>
+                        <a href="#"> P2Pro Merchant Application
+
+
+                        </a>
+                        <a href="#"> Historical Market Data
+
+
+                        </a>
+                        <a href="#"> Proof of Reserves
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
