--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
         </section>
     </section>
 
-    <!-- earning section -->
-
-
+    <!-- help section -->
     <section class="help">
         <div class="container">
             <h1>Need help?</h1>
@@ -113,6 +111,106 @@
                 </div>
 
             </div>
+        </div>
+    </section>
+
+    <!-- Earn daily rewards section -->
+    <section class="rewards">
+        <div class="container">
+            <h1>Earn daily rewards on your idle tokens</h1>
+            <h6>Simple & Secure. Search popular coins and start earning.</h6>
+            <div style="margin-bottom: 50px;" class="d-flex flex-wrap gap-4">
+                <div class="reward_box">
+                    <img src="./assets/icon/usdt.png" alt="">
+                    <h5>USDT</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/btc.png" alt="">
+                    <h5>BTC</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/bnb.png" alt="">
+                    <h5>BNB</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/busd.png" alt="">
+                    <h5>BUSD</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/eth.png" alt="">
+                    <h5>ETH</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/dot.png" alt="">
+                    <h5>DOT</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/ada.png" alt="">
+                    <h5>ADA</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/shib.png" alt="">
+                    <h5>SHIB</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/sol.png" alt="">
+                    <h5>SOL</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="reward_box">
+                    <img src="./assets/icon/matic.png" alt="">
+                    <h5>MATIC</h5>
+                    <p>APR <span class="text-success">
+                            0.11%-39.67%</span></p>
+                    <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+            <button class="signup_btn">Start to Earn</button>
         </div>
     </section>
 
@@ -211,59 +309,68 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-2">
-                    <h6>Service
-
-                    </h6>
+                    <h6>Service </h6>
                     <div>
-                        <a href="#">Downloads
-
-                        </a>
-                        <a href="#">Desktop Application
-
-                        </a>
-                        <a href="#">Buy Crypto
-
-                        </a>
-                        <a href="#">Institutional & VIP Services
-
-                        </a>
-                        <a href="#"> OTC Trading
-
-
-                        </a>
-                        <a href="#"> Referral
-
-
-                        </a>
-                        <a href="#"> Affiliate
-
-
-                        </a>
-                        <a href="#"> BNB
-
-
-                        </a>
-                        <a href="#"> Listing Application
-
-
-                        </a>
-                        <a href="#"> P2P Merchant Application
-
-
-                        </a>
-                        <a href="#"> P2Pro Merchant Application
-
-
-                        </a>
-                        <a href="#"> Historical Market Data
-
-
-                        </a>
+                        <a href="#">Downloads </a>
+                        <a href="#">Desktop Application </a>
+                        <a href="#">Buy Crypto </a>
+                        <a href="#">Institutional & VIP Services </a>
+                        <a href="#"> OTC Trading </a>
+                        <a href="#"> Referral </a>
+                        <a href="#"> Affiliate </a>
+                        <a href="#"> BNB </a>
+                        <a href="#"> Listing Application </a>
+                        <a href="#"> P2P Merchant Application </a>
+                        <a href="#"> P2Pro Merchant Application </a>
+                        <a href="#"> Historical Market Data </a>
                         <a href="#"> Proof of Reserves
                         </a>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-2">
+                    <h6>Support </h6>
+                    <div>
+                        <a href="#"> Request a Feature</a>
+                        <a href="#">Support Center
+                        </a>
+                        <a href="#"> 24/7 Chat Support </a>
+                        <a href="#">APIs </a>
+                        <a href="#"> Fees </a>
+                        <a href="#"> Trading Rules </a>
+                        <a href="#"> Binance Verify </a>
+                        <a href="#"> Law Enforcement Requests
+                        </a>
+                        <a href="#"> Binance Legal (Court Orders)
+                        </a>
+                        <a href="#"> Binance Airdrop Portal </a>
+
+
+
 
                     </div>
                 </div>
+                <div class="col-12 col-lg-2">
+                    <h6>Learn </h6>
+                    <div>
+                        <a href="#"> Learn & Earn
+                        </a>
+                        <a href="#">Browse Crypto Prices </a>
+                        <a href="#"> Bitcoin Price </a>
+                        <a href="#">Ethereum Price </a>
+                        <a href="#"> Browse Crypto Price Predictions </a>
+                        <a href="#"> Bitcoin Price Prediction </a>
+                        <a href="#"> Ethereum Price Prediction</a>
+                        <a href="#"> Buy BNB </a>
+                        <a href="#"> Buy BUSD</a>
+                        <a href="#"> Buy Bitcoin</a>
+                        <a href="#"> Buy Ethereum</a>
+                        <a href="#"> Buy Dogecoin</a>
+                        <a href="#"> Buy Ripple </a>
+                        <a href="#"> Buy Tradable Altcoins</a>
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </footer>
