--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 <body>
     <section class="banner_bg">
-
         <!-- banner section -->
         <section class="banner">
             <div class="container">
@@ -25,7 +24,8 @@
                         <p>Trade Bitcoin for free</p>
                         <div style="max-width: 390px;">
 
-                            <button class="signup_btn w-100">Sign up with Email or Phone</button>
+                            <button class="signup_btn w-100 d-flex align-items-center"><i
+                                    class="fa-solid fa-user me-2"></i> Sign up with Email or Phone</button>
                             <div>
                                 <span>or continue with</span>
                             </div>
@@ -46,8 +46,6 @@
                 </div>
             </div>
         </section>
-
-
         <!-- counting section -->
         <section class="counting">
             <div class="container">
@@ -74,51 +72,11 @@
         </section>
     </section>
 
-    <!-- help section -->
-    <section class="help">
-        <div class="container">
-            <h1>Need help?</h1>
-            <div class="row">
-                <div class="col-12 col-lg-4">
-                    <div class="d-flex align-items-start gap-4">
-                        <img src="./assets/icon/support.svg" alt="">
-                        <div>
-                            <h6>24/7 Chat Support</h6>
-                            <p>Get 24/7 chat support with our friendly customer service agents at your service.</p>
-                            <button>Chat now</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="d-flex align-items-start gap-4">
-                        <img src="./assets/icon/faq.svg" alt="">
-                        <div>
-                            <h6>FAQs </h6>
-                            <p>View FAQs for detailed instructions on specific features.</p>
-                            <button>View more</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="d-flex align-items-start gap-4">
-                        <img src="./assets/icon/blog.svg" alt="">
-                        <div>
-                            <h6>Blog </h6>
-                            <p>Stay up to date with the latest stories and commentary.</p>
-                            <button>View more</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
     <!-- Earn daily rewards section -->
-    <section class="rewards">
+    <section class="rewards section_gap">
         <div class="container">
-            <h1>Earn daily rewards on your idle tokens</h1>
-            <h6>Simple & Secure. Search popular coins and start earning.</h6>
+            <h1 class="title">Earn daily rewards on your idle tokens</h1>
+            <h6 class="subtitle">Simple & Secure. Search popular coins and start earning.</h6>
             <div style="margin-bottom: 50px;" class="d-flex flex-wrap gap-4">
                 <div class="reward_box">
                     <img src="./assets/icon/usdt.png" alt="">
@@ -190,32 +148,180 @@
                             0.11%-39.67%</span></p>
                     <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             </div>
             <button class="signup_btn">Start to Earn</button>
         </div>
     </section>
 
 
+    <!-- crypto portfolio section -->
+    <section class="crypto section_gap">
+        <div class="container">
+            <div class="row ">
+                <div class="col-12 col-lg-6">
+                    <h1 class="title">Build your crypto portfolio</h1>
+                    <h6 class="subtitle">Start your first trade with these easy steps.</h6>
 
+                    <div>
+                        <div class="d-flex gap-4 align-items-center mb-5">
+                            <img src="./assets/icon/identity.svg" alt="">
+                            <div>
+                                <h3>Verify your identity</h3>
+                                <p>Complete the identity verification process to secure your account and transactions.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="d-flex gap-4 align-items-center mb-5">
+                            <img src="./assets/icon/account.svg" alt="">
+                            <div>
+                                <h3>
+                                    Fund your account </h3>
+                                <p>Add funds to your crypto account to start trading crypto. You can add funds with a
+                                    variety of payment methods.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="d-flex gap-4 align-items-center mb-5">
+                            <img src="./assets/icon/trading.svg" alt="">
+                            <div>
+                                <h3>Start trading</h3>
+                                <p>You're good to go! Buy/sell crypto, set up recurring buys for your investments, and
+                                    discover what Binance has to offer.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <button class="signup_btn px-5">Get Started</button>
+
+
+
+
+
+                </div>
+                <div class="col-12 col-lg-1">
+
+                </div>
+                <div class="col-12 col-lg-3">
+                    <img class="img-fluid" src="./assets/crypto.webp" alt="">
+                </div>
+                <div class="col-12 col-lg-2">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="trade section_gap">
+        <div class="container">
+            <div class="d-flex align-items-start justify-content-between">
+                <div>
+                    <h1 class="title">Trade on the go. Anywhere, anytime.</h1>
+                    <h6 class="subtitle">Stay in the know with our app and desktop client.</h6>
+                </div>
+                <p class="right_btn d-flex align-items-center gap-2">More download options <i
+                        class="fw-bold fa-solid fa-angle-right"></i></p>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-6">
+                    <img class="img-fluid" src="./assets/trade.webp" alt="">
+                </div>
+                <div class="col-12 col-lg-1">
+                </div>
+
+                <div class="col-12 col-lg-5">
+                    <div class="d-flex align-items-center gap-4 ios">
+                        <img style="width: 88px;height:88px" class="img-fluid"
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/QR_code_for_mobile_English_Wikipedia.svg/1200px-QR_code_for_mobile_English_Wikipedia.svg.png"
+                            alt="">
+                        <div>
+                            <p>Scan to Download</p>
+                            <h5>iOS & Android</h5>
+                        </div>
+
+                    </div>
+                    <div class="d-flex flex-wrap gap-5">
+                        <div class="os">
+                            <i class="fs-3 fw-bold fa-brands fa-apple mb-2"></i>
+                            <p>App Store</p>
+                        </div>
+                        <div class="os">
+                            <i class="fs-3 fw-bold fa-brands fa-android mb-2"></i>
+                            <p>Android APK </p>
+                        </div>
+
+                        <div class="os">
+                            <i class="fs-3 fw-bold fa-brands fa-google-play mb-2"></i>
+                            <p>Google Play </p>
+                        </div>
+                        <div class="os">
+                            <i class="fs-3 fw-bold fa-solid fa-circle-xmark mb-2"></i>
+                            <p>MacOS </p>
+                        </div>
+                        <div class="os">
+                            <i class="fs-3 fw-bold fa-brands fa-windows mb-2"></i>
+                            <p>Windows </p>
+                        </div>
+                        <div class="os">
+                            <i class="fs-3 fw-bold fa-brands fa-linux mb-2"></i>
+                            <p>Linux</p>
+                        </div>
+                        <div class="os">
+                            <i class="fs-3 fw-bold fa-solid fa-plug-circle-check mb-2"></i>
+                            <p>API</p>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- help section -->
+    <section class="help">
+        <div class="container">
+            <h1>Need help?</h1>
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <div class="d-flex align-items-start gap-4">
+                        <img src="./assets/icon/support.svg" alt="">
+                        <div>
+                            <h6>24/7 Chat Support</h6>
+                            <p>Get 24/7 chat support with our friendly customer service agents at your service.</p>
+                            <button>Chat now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="d-flex align-items-start gap-4">
+                        <img src="./assets/icon/faq.svg" alt="">
+                        <div>
+                            <h6>FAQs </h6>
+                            <p>View FAQs for detailed instructions on specific features.</p>
+                            <button>View more</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="d-flex align-items-start gap-4">
+                        <img src="./assets/icon/blog.svg" alt="">
+                        <div>
+                            <h6>Blog </h6>
+                            <p>Stay up to date with the latest stories and commentary.</p>
+                            <button>View more</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
     <!-- earning section -->
@@ -226,9 +332,7 @@
         </div>
     </section>
 
-
     <!-- footer section -->
-
     <footer>
         <div class="container">
             <div class="row">
