--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <p>Trade Bitcoin for free</p>
                         <div style="max-width: 390px;">
 
-                            <button class="signup_btn w-100 d-flex align-items-center"><i
+                            <button class="warning_btn w-100 d-flex align-items-center"><i
                                     class="fa-solid fa-user me-2"></i> Sign up with Email or Phone</button>
                             <div>
                                 <span>or continue with</span>
@@ -149,7 +149,66 @@
                     <button class="btn btn-light"><i class="fa-solid fa-chevron-right"></i></button>
                 </div>
             </div>
-            <button class="signup_btn">Start to Earn</button>
+            <button class="warning_btn">Start to Earn</button>
+        </div>
+    </section>
+
+    <!-- trusted crypto section -->
+    <section class="trusted section_gap">
+        <div class="container">
+            <div class="d-flex align-items-start justify-content-between">
+                <div>
+                    <h1 class="title">Your trusted crypto exchange</h1>
+                    <h6 class="subtitle">Here at Binance, we are committed to user protection with strict protocols and
+                        industry-leading technical measures.</h6>
+                </div>
+                <p class="right_btn d-flex align-items-center gap-2">View more <i
+                        class="fw-bold fa-solid fa-angle-right"></i></p>
+            </div>
+
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-6">
+                    <div class="crypto ">
+                        <div class="d-flex gap-4 align-items-center mb-5">
+                            <img src="./assets/icon/secure.svg" alt="">
+                            <div>
+                                <h3>Secure Asset Fund for Users (SAFU)</h3>
+                                <p>Binance stores 10% of all trading fees in a secure asset fund to protect a share of
+                                    user funds.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="d-flex gap-4 align-items-center mb-5">
+                            <img src="./assets/icon/personalise.svg" alt="">
+                            <div>
+                                <h3>
+                                    Personalised Access Control </h3>
+                                <p>Personalized access control allows you to restrict devices and addresses that can
+                                    access your account, for greater ease of mind.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="d-flex gap-4 align-items-center mb-5">
+                            <img src="./assets/icon/trading.svg" alt="">
+                            <div>
+                                <h3>Advanced Data Encryption </h3>
+                                <p>Your transaction data is secured via end-to-end encryption, ensuring that only you
+                                    have access to your personal information.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <img class="img-fluid" src="./assets/trusted.webp" alt="">
+                </div>
+            </div>
+
+
+            <button class="warning_btn px-5">Get Started</button>
+
+
+
         </div>
     </section>
 
@@ -193,7 +252,7 @@
                     </div>
 
 
-                    <button class="signup_btn px-5">Get Started</button>
+                    <button class="warning_btn px-5">Get Started</button>
 
 
 
@@ -213,6 +272,7 @@
         </div>
     </section>
 
+    <!-- Trade section -->
     <section class="trade section_gap">
         <div class="container">
             <div class="d-flex align-items-start justify-content-between">
@@ -281,8 +341,6 @@
         </div>
     </section>
 
-
-
     <!-- help section -->
     <section class="help">
         <div class="container">
@@ -328,7 +386,7 @@
     <section class="earning">
         <div class="container text-center">
             <h1>Start earning today</h1>
-            <button class="signup_btn">Sign Up Now</button>
+            <button class="warning_btn">Sign Up Now</button>
         </div>
     </section>
 
@@ -478,10 +536,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
