explore section add

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
         </section>
     </section>
 
+
+
+    <!-- Trending on Binance section -->
+    <section class="trending">
+        <div class="container">
+
+        </div>
+    </section>
+
+
+
     <!-- Earn daily rewards section -->
     <section class="rewards section_gap">
         <div class="container">
@@ -152,6 +163,41 @@
             <button class="warning_btn">Start to Earn</button>
         </div>
     </section>
+
+
+    <!-- Explore endless section -->
+    <section class="explore section_gap">
+        <div class="container">
+            <h1>Explore endless possibilities with Binance</h1>
+            <div class="d-flex gap-4 mb-5">
+                <div class="explore_box">
+                    <img class="img-fluid" src="./assets/dive.webp" alt="">
+                    <div>
+                        <h2>Dive into the world of NFTs</h2>
+                        <p>Open rare Mystery Boxes, explore IGOs, Fan Tokens, and more with Binance NFT.</p>
+                    </div>
+                </div>
+                <div class="explore_box">
+                    <div>
+                        <h2>Grow your business with Binance Pay</h2>
+                        <p>Reach more customers as you pay and get paid in crypto with our borderless payment technology
+                            on
+                            Binance Pay & Binance Marketplace.</p>
+                    </div>
+                    <img class="img-fluid" src="./assets/grow.webp" alt="">
+                </div>
+                <div class="explore_box">
+                    <img class="img-fluid" src="./assets/earn.webp" alt="">
+                    <div>
+                        <h2>Binance Earn</h2>
+                        <p>Hold your crypto funds and start earning.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="warning_btn px-5">Explore Now</button>
+        </div>
+    </section>
+
 
     <!-- trusted crypto section -->
     <section class="trusted section_gap">
