add trending section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-lg-6">
-                        <h1>Buy, trade, and hold 350+ cryptocurrencies on <br> Binance</h1>
-                        <p>Trade Bitcoin for free</p>
+                        <h1>Buy, trade, and hold 350+ cryptocurrencies on <br class="d-none d-lg-block"> Binance</h1>
+                        <p><i class="text-warning fa-solid fa-gift fs-6"></i> Trade Bitcoin for free <i
+                                class="fs-6 text-secondary fa-solid fa-chevron-right"></i></p>
                         <div style="max-width: 390px;">
 
                             <button class="warning_btn w-100 d-flex align-items-center"><i
@@ -50,21 +51,21 @@
         <section class="counting">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <h3>$38 billion</h3>
                         <p>24h trading volume on Binance <br> exchange</p>
                     </div>
-                    <div class="col-12 col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <h3>350+</h3>
                         <p>Cryptocurrencies listed</p>
                     </div>
-                    <div class="col-12 col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <h3>150 million</h3>
                         <p>Registered users</p>
                     </div>
-                    <div class="col-12 col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <h3>
-                            <0.10%< /h3>
+                            <0.10% </h3>
                                 <p>Lowest transaction fees</p>
                     </div>
                 </div>
@@ -75,8 +76,130 @@
 
 
     <!-- Trending on Binance section -->
-    <section class="trending">
+    <section class="trending section_gap">
         <div class="container">
+            <div class="d-flex flex-column flex-lg-row align-items-start justify-content-between mb-5">
+                <div>
+                    <h1 class="title">Trending on Binance Feed</h1>
+                    <h6 class="subtitle">Discover the latest crypto news and feed from news media and influencers.</h6>
+                </div>
+                <p class="right_btn d-flex align-items-center gap-2">View more <i
+                        class="fw-bold fa-solid fa-angle-right"></i></p>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-lg-9">
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <div class="d-flex align-items-start gap-3 mb-5">
+                                <i class="fa-solid fa-parachute-box"></i>
+                                <div>
+                                    <div style="margin-bottom: 8px;" class="d-flex align-items-center gap-2">
+                                        <img class="avater" src="./assets/icon/anfelia.jpg" alt="">
+                                        <p class="mb-0">Anfelia</p>
+                                    </div>
+                                    <h4 style="margin-bottom: 8px;">EASY 700%: This #Coin Can Explode Before The End Of
+                                        This Year After conducting a
+                                        serious fundamental...
+                                    </h4>
+                                    <span>a day ago</span>
+                                </div>
+                            </div>
+                            <div class="d-flex align-items-start gap-3 mb-5">
+                                <i class="fa-solid fa-parachute-box"></i>
+                                <div>
+                                    <div style="margin-bottom: 8px;" class="d-flex align-items-center gap-2">
+                                        <img class="avater" src="./assets/icon/masood.jpg" alt="">
+                                        <p class="mb-0">Masood</p>
+                                    </div>
+                                    <h4 style="margin-bottom: 8px;">EASY 700%: This #Coin Can Explode Before The End Of
+                                        This Year After conducting a
+                                        serious fundamental...
+                                    </h4>
+                                    <span>2 hours ago</span>
+                                </div>
+                            </div>
+                            <div class="d-flex align-items-start gap-3">
+                                <i class="fa-solid fa-parachute-box"></i>
+                                <div>
+                                    <div style="margin-bottom: 8px;" class="d-flex align-items-center gap-2">
+                                        <img class="avater" src="./assets/icon/ogiso.jpg" alt="">
+                                        <p class="mb-0">Ogiso</p>
+                                    </div>
+                                    <h4 style="margin-bottom: 8px;">EASY 700%: This #Coin Can Explode Before The End Of
+                                        This Year After conducting a
+                                        serious fundamental...
+                                    </h4>
+                                    <span>9 hours ago</span>
+                                </div>
+                            </div>
+
+
+
+
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="d-flex align-items-start gap-3 mb-5">
+                                <i class="fa-solid fa-parachute-box"></i>
+                                <div>
+                                    <div style="margin-bottom: 8px;" class="d-flex align-items-center gap-2">
+                                        <img class="avater" src="./assets/icon/safoyin.jpg" alt="">
+                                        <p class="mb-0">Safoyin</p>
+                                    </div>
+                                    <h4 style="margin-bottom: 8px;">EASY 700%: This #Coin Can Explode Before The End Of
+                                        This Year After conducting a
+                                        serious fundamental...
+                                    </h4>
+                                    <span>a day ago</span>
+                                </div>
+                            </div>
+                            <div class="d-flex align-items-start gap-3 mb-5">
+                                <i class="fa-solid fa-parachute-box"></i>
+                                <div>
+                                    <div style="margin-bottom: 8px;" class="d-flex align-items-center gap-2">
+                                        <img class="avater" src="./assets/icon/sailor.jpg" alt="">
+                                        <p class="mb-0">Sailor</p>
+                                    </div>
+                                    <h4 style="margin-bottom: 8px;">EASY 700%: This #Coin Can Explode Before The End Of
+                                        This Year After conducting a
+                                        serious fundamental...
+                                    </h4>
+                                    <span>2 hours ago</span>
+                                </div>
+                            </div>
+                            <div class="d-flex align-items-start gap-3">
+                                <i class="fa-solid fa-parachute-box"></i>
+                                <div>
+                                    <div style="margin-bottom: 8px;" class="d-flex align-items-center gap-2">
+                                        <img class="avater" src="./assets/icon/zaggy.jpg" alt="">
+                                        <p class="mb-0">Zaggy</p>
+                                    </div>
+                                    <h4 style="margin-bottom: 8px;">EASY 700%: This #Coin Can Explode Before The End Of
+                                        This Year After conducting a
+                                        serious fundamental...
+                                    </h4>
+                                    <span>9 hours ago</span>
+                                </div>
+                            </div>
+
+
+
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-12 col-lg-3">
+                    <div class="community">
+                        <img style="margin-bottom: 8px;" class="img-fluid" src="./assets/trending.svg" alt="">
+                        <div>
+                            <h3>World's largest crypto community</h3>
+                            <button class="warning_btn px-5">Explore now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </section>
@@ -87,7 +210,7 @@
     <section class="rewards section_gap">
         <div class="container">
             <h1 class="title">Earn daily rewards on your idle tokens</h1>
-            <h6 class="subtitle">Simple & Secure. Search popular coins and start earning.</h6>
+            <h6 class="subtitle mb-5">Simple & Secure. Search popular coins and start earning.</h6>
             <div style="margin-bottom: 50px;" class="d-flex flex-wrap gap-4">
                 <div class="reward_box">
                     <img src="./assets/icon/usdt.png" alt="">
@@ -169,7 +292,7 @@
     <section class="explore section_gap">
         <div class="container">
             <h1>Explore endless possibilities with Binance</h1>
-            <div class="d-flex gap-4 mb-5">
+            <div class="d-flex flex-wrap flex-lg-nowrap gap-4 mb-5">
                 <div class="explore_box">
                     <img class="img-fluid" src="./assets/dive.webp" alt="">
                     <div>
@@ -202,7 +325,7 @@
     <!-- trusted crypto section -->
     <section class="trusted section_gap">
         <div class="container">
-            <div class="d-flex align-items-start justify-content-between">
+            <div class="d-flex flex-column flex-lg-row align-items-start justify-content-between mb-5">
                 <div>
                     <h1 class="title">Your trusted crypto exchange</h1>
                     <h6 class="subtitle">Here at Binance, we are committed to user protection with strict protocols and
@@ -265,7 +388,7 @@
             <div class="row ">
                 <div class="col-12 col-lg-6">
                     <h1 class="title">Build your crypto portfolio</h1>
-                    <h6 class="subtitle">Start your first trade with these easy steps.</h6>
+                    <h6 class="subtitle mb-5">Start your first trade with these easy steps.</h6>
 
                     <div>
                         <div class="d-flex gap-4 align-items-center mb-5">
@@ -321,7 +444,7 @@
     <!-- Trade section -->
     <section class="trade section_gap">
         <div class="container">
-            <div class="d-flex align-items-start justify-content-between">
+            <div class="d-flex flex-column flex-lg-row align-items-start justify-content-between mb-5">
                 <div>
                     <h1 class="title">Trade on the go. Anywhere, anytime.</h1>
                     <h6 class="subtitle">Stay in the know with our app and desktop client.</h6>
@@ -440,7 +563,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-2">
+                <div class="col-6 col-lg-2">
                     <h6>About Us</h6>
                     <div>
                         <a href="#">About</a>
@@ -475,7 +598,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-2">
+                <div class="col-6 col-lg-2">
                     <h6>Products
                     </h6>
                     <div>
@@ -516,7 +639,7 @@
 
                     </div>
                 </div>
-                <div class="col-12 col-lg-2">
+                <div class="col-6 col-lg-2">
                     <h6>Service </h6>
                     <div>
                         <a href="#">Downloads </a>
@@ -535,7 +658,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-2">
+                <div class="col-6 col-lg-2">
                     <h6>Support </h6>
                     <div>
                         <a href="#"> Request a Feature</a>
@@ -557,7 +680,7 @@
 
                     </div>
                 </div>
-                <div class="col-12 col-lg-2">
+                <div class="col-6 col-lg-2">
                     <h6>Learn </h6>
                     <div>
                         <a href="#"> Learn & Earn
@@ -578,8 +701,27 @@
 
                     </div>
                 </div>
+                <div class="col-6 col-lg-2">
+                    <h6>Community </h6>
+                    <div class="d-flex flex-wrap gap-4">
+                        <a href="#"> <i class="fa-brands fa-discord fs-5 "></i>
+                        </a>
+                        <a href="#"><i class="fa-brands fa-telegram fs-5"></i> </a>
+                        <a href="#"> <i class="fa-brands fa-tiktok fs-5"></i> </a>
+                        <a href="#"><i class="fa-brands fa-facebook fs-5"></i> </a>
+                        <a href="#"> <i class="fa-brands fa-twitter fs-5"></i> </a>
+                        <a href="#"> <i class="fa-brands fa-reddit fs-5"></i> </a>
+                        <a href="#"> <i class="fa-brands fa-instagram fs-5"></i></a>
+                        <a href="#"> <i class="fa-solid fa-coins fs-5"></i></a>
+                        <a href="#"> <i class="fa-brands fa-vk fs-5"></i></a>
+                        <a href="#"> <i class="fa-brands fa-youtube fs-5"></i></a>
+                    </div>
+                </div>
+
 
             </div>
+            <hr>
+            <p class="text-center py-3">Binance © 2023</p>
         </div>
     </footer>
 
