--- a/index.html
+++ b/index.html
@@ -724,7 +724,12 @@
             <p class="text-center py-3">Binance © 2023</p>
         </div>
     </footer>
+    <div class="sms">
 
+        <i class="fa-solid fa-comment-dots"></i>
+        <p class="mb-0">Support</p>
+
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
