--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
 </head>
 
 <body>
+
+    <header>
+
+    </header>
+
+    <section class="gift_box">
+        <div class="container d-flex align-itens-center gap-2 justify-content-center">
+            <p class="mb-0"><i class="text-warning fa-solid fa-gift fs-6"></i> Register now — Get up to 100 USDT in trading fee
+                rebate (for verified users)</p>
+            <button class="warning_btn py-0 px-2 mb-0">Radeem Gift</button>
+        </div>
+    </section>
+
+
+
+
+
     <section class="banner_bg">
         <!-- banner section -->
         <section class="banner">
