--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                     class="fw-bold fa-solid fa-angle-right"></i></p>
         </div>
 
-        <table class="table table-hover">
+        <table class="table table-hover w-100">
             <thead>
                 <tr>
 
@@ -563,31 +563,41 @@
             </thead>
             <tbody>
                 <tr>
-
                     <td>
-                        <div class="d-flex">
-                            <img src alt />
+                        <div class="d-flex gap-2">
                             <p>BNB</p>
-                            <p>BNB</p>
+                            <span class="text-secondary">BNB</span>
+
                         </div>
 
                     </td>
                     <td>$241.5</td>
-                    <td>-0.17%</td>
+                    <td class="text-success">1.17%</td>
                     <td>$37,171M</td>
                 </tr>
                 <tr>
 
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
+                    <td>
+                        <div class="d-flex gap-2">
+                            <p>Bitcoin</p>
+                            <span class="text-secondary">BTC</span>
+
+                        </div>
+                    </td>
+                    <td>$241.544</td>
+                    <td class="text-danger">-0.18%</td>
+                    <td>$37,5565747M</td>
                 </tr>
                 <tr>
-                    <td>Larry the Bird</td>
-                    <td>@twitter</td>
-                    <td>@twitter</td>
-                    <td>@twitter</td>
+                    <td>
+                        <div class="d-flex gap-2">
+                            <p>Ethereum</p>
+                            <span class="text-secondary">ETH</span>
+                        </div>
+                    </td>
+                    <td>$241.545</td>
+                    <td class="text-success">+1.23%</td>
+                    <td>$4437,556M</td>
                 </tr>
             </tbody>
         </table>
